--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,13 @@ Base Responsive Styling
     width: 100%;
 
  }
+
+ html {font-size: 1rem;}
+
+body {
+  font-family: 'Rajdhani', sans-serif;
+   /* font-family: Lato, sans-serif; */
+  font-weight: 300;
+  line-height: 1.5;
+  color: #333;
+}
