--- a/scss/style.scss
+++ b/scss/style.scss
@@ -72,3 +72,10 @@ body {
 /////////.articletitle{
   ///margin: 1em;
 //}
+
+.page-footer{
+  border-top: 5px solid #FFFF00
+  padding-top: 1em;
+  background-color: #FFFF00;
+  color: #fff;
+}
