--- a/scss/style.scss
+++ b/scss/style.scss
@@ -74,7 +74,7 @@ body {
 //}
 
 .page-footer{
-  border-top: 5px solid #FFFF00
+  border-top: 5px solid #FFFF00;
   padding-top: 1em;
   background-color: #FFFF00;
   color: #fff;
