--- a/scss/style.scss
+++ b/scss/style.scss
@@ -74,8 +74,8 @@ body {
 //}
 
 .page-footer{
-  border-top: 5px solid #FFFF00;
+  border-top: 5px solid #FF0000;
   padding-top: 1em;
-  background-color: #FFFF00;
+  background-color: #FF0000;
   color: #fff;
 }
