--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -1,7 +1,7 @@
 /* Optional, include a web font  */
 @import url('https://fonts.googleapis.com/css?family=Lato:700');
 @import url('https://fonts.googleapis.com/css?family=Gentium+Book+Basic:400,400i,700,700i');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Luckiest+Guy');
 /* The html and body selectors below set the base font for the entire page */
 html {font-size: 1rem;}
 
@@ -34,7 +34,7 @@ h1 {
   font-size: 5.063rem;
   line-height: 1;
   margin: 0 0 0.5rem 0;
-  font-family: Open+Sans;
+  font-family: Luckiest+Guy;
 }
 
 h2 {
