--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -34,7 +34,7 @@ h1 {
   font-size: 5.063rem;
   line-height: 1;
   margin: 0 0 0.5rem 0;
-  font-family: Luckiest+Guy;
+  font-family: Luckiest Guy;
 }
 
 h2 {
