--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -26,7 +26,7 @@ p, li {
 /* Base Styling for headings  */
 h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
-  font-family: Lato, Francois One;
+  font-family: Francois One;
 }
 
 /* For each of your headings at minimum set the margin, size, line-height. Adjust font-weight and other properties as needed. */
