--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,6 +25,7 @@ Base Responsive Styling
    box-sizing: inherit;
  }
 
+
  /* Basic Responsive Images and Video */
  img,video{
    width: auto;
@@ -67,6 +68,18 @@ body {
   content: "";
   display: table;
   clear: both;
+}
+
+.img-container {
+float: left;
+width: 25%;
+padding: 2px;
+}
+
+.clearfix::after {
+content: "";
+clear: both;
+display: table;
 }
 
 /////////.articletitle{
