--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,7 +2,10 @@
 @import 'typography';
 @import 'nav';
 body{
-  background-color: #FFA500;
+  //background-color: #FFA500;//
+  #grad {
+  background-image: linear-gradient(red, yellow);
+}
 }
 /*
 Base responsive styling
