--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,10 +2,8 @@
 @import 'typography';
 @import 'nav';
 body{
-  //background-color: #FFA500;//
-  div {
-    background: linear-gradient(to top, #33ccff 0%, #ff99cc 100%);
-}
+  background-color: #FFA500;
+  
 }
 /*
 Base responsive styling
