--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,8 +2,9 @@
 @import 'typography';
 @import 'nav';
 body{
-  background-color: #FFA500;
-  
+  background-color: linear-gradient(to top, #33ccff 0%, #ff99cc 100%);
+
+
 }
 /*
 Base responsive styling
