--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,8 +2,7 @@
 @import 'typography';
 @import 'nav';
 body{
-  background-color: linear-gradient(to top, #33ccff 0%, #ff99cc 100%);
-
+  background-color: #FFFF00;
 
 }
 /*
