--- a/scss/style.scss
+++ b/scss/style.scss
@@ -51,7 +51,7 @@ body {
    /* font-family: Lato, sans-serif; */
   font-weight: 300;
   line-height: 1.5;
-  color: #800000;
+  color: #8B0000;
 }
 
 .inline-image{
