--- a/scss/style.scss
+++ b/scss/style.scss
@@ -45,7 +45,7 @@ Base Responsive Styling
  }
 
  .site-header{
-   color:  #FFD700  //*#4169E1*//
+   color: #4169E1
  }
 
  html {font-size: 1rem;}
