--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,7 +2,7 @@
 @import 'typography';
 @import 'nav';
 body{
-  background-color: #FFA500;
+  background-color: #ADD8E6 //*#FFA500*//;
 
 }
 /*
@@ -49,7 +49,7 @@ Base Responsive Styling
  }
 
 
- 
+
 
  html {font-size: 1rem;}
 
