--- a/scss/style.scss
+++ b/scss/style.scss
@@ -96,7 +96,7 @@ display: table;
 .page-footer {
   border-top: 5px solid #2C65E8;
   padding-top: 1em;
-  background-color: #2C65E8;
+  background-color: #FFA500;
   color: #fff;
 }
 
