--- a/scss/style.scss
+++ b/scss/style.scss
@@ -94,9 +94,9 @@ display: table;
   //margin: 1em;}*//
 
 .page-footer {
-  border-top: 5px solid #8B0000;
+  border-top: 5px solid #81A594;
   padding-top: 1em;
-  background-color: #8B0000;
+  background-color: #81A594;
   color: #fff;
 }
 
