--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -33,7 +33,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 5.063rem;
-  //line-height: 1;
+  //line-height: 1;//
   margin: 0  0.5rem 0;
   font-family: Luckiest Guy;
 }
